2006-02-01  Phil Muldoon  <pmuldoon@redhat.com>

	* TrayIcon.java: Externalize all translation strings.
	* ThreadMenu.java: Ditto.
	* TaskStatusWidget.java: Ditto.
	* StatusWidget.java: Ditto.
	* SimpleComboBox.java: Ditto.
	* ProgramViewPage.java: Ditto.
	* ProgramDataModel.java: Ditto.
	* ProgramData.java: Ditto.
	* ProgramAddWindow.java: Ditto.
	* ProcViewPage.java: Ditto.
	* ProcMenu.java: Ditto.
	* ProcDataModel.java: Ditto.
	* PreferencesWindow.java: Ditto.
	* MainWindow.java: Ditto.
	* ListView.java: Ditto.
	* InfoWidget.java: Ditto.
	* GuiData.java: Ditto.
	* FilterWidget.java: Ditto.
	* EventLogger.java: Ditto.
	* DetailedObserverTreeView.java: Ditto.
	* CustomeObserverWindow.java: Ditto.

2006-01-31  Andrew Cagney  <cagney@redhat.com>

	* ProcDataModel.java: Update, use renamed observableProcAddedXXX,
	and observableProcRemovedXXX.

2006-01-27  Sami Wagiaalla  <swagiaal@redhat.com>

	* DetailedObserverTreeView.java (getSelectedObserver): Fixed npe
	and all other selection bugs.

2006-01-26  Adam Jocksch  <ajocksch@redhat.com>

	* TrayIcon.java (TrayIcon): First parameter is now the tooltip to have
	over the tray icon.
	(setContents): Now adds a tooltip to the icon.

2006-01-26  Sami Wagiaalla  <swagiaal@redhat.com>

	* SaveableXXX.java : removed setSaveObject. added 
	{do/dont}SaveObject.
	* ObjectFactory.java (saveObject): Removed some debug output.
	Added check for invalid saved Observer files.
	updated to match SaveableXXX refactor.
	* GuiObject.java: updated to match SaveableXXX refactor.
	* observers/ObserverRoot.java: Ditto.
	* observers/ObserverManager.java: Ditto.
	* actions/ActionPoint.java: Ditto.
	* filters/FilterPoint.java: Ditto.
	
2006-01-24  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/ObserverManager.java (loadObservers): Now saves
	observers when they are added to the manager and loads them
	when instantiated.
	* ObjectFactory.java (importNode): Added importing and 
	exporting to objects save to a node to disk.
