@@ -41,6 +41,7 @@ package frysk.gui.monitor.actions;
 
 import java.util.Observable;
 
+import frysk.gui.common.Messages;
 import frysk.gui.monitor.ObservableLinkedList;
 
 /**
@@ -85,7 +86,7 @@ public class ActionManager extends Observable {
 	 * */
 	public Action getObserver(Action prototype){
 		//XXX: Not implemented.
-		throw new RuntimeException("Not implemented");
+		throw new RuntimeException(Messages.getString("ActionManager.0")); //$NON-NLS-1$
 		//return prototype.getCopy();
 	}
 	
